--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -28,7 +28,7 @@
 
                     <div class="navbar-header">
                         <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                        <a href="#" class="navbar-brand">About PIMS</a>
+                        <a href="/about_pims" class="navbar-brand">About PIMS</a>
                     </div>
 
                     <div class="navbar-collapse collapse" id="mobile_menu">
@@ -165,53 +165,111 @@ a:hover {
 
 </style>
 <div>
-    <header class="header">
-        <div>
-            <p class="header-intro">About PIMS</p>
-            <h1 class="header-name">Plot Information Management System (PIMS) is a complete solution for Land Developers.</h1>
+
+    <div id="colorlib-main">
+        <section class="ftco-section contact-section px-md-4">
+      <div class="container">
+          {% if profile %}
+            <div class="row d-flex mb-5 contact-info">
+            <div class="col-md-12 mb-4">
+                <h2 class="h3">Contact Information</h2>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-2">
+                    <p><span>Address:</span>{{ profile.address }}</p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-2">
+                    <p><span>Phone:</span> <a href="tel://{{ profile.phone_number }}">{{ profile.phone_number }}</a></p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-2">
+                    <p><span>Email:</span> <a href="mailto:{{ profile.email }}">{{ profile.email }}</a></p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-2">
+                    <p><span>Website</span> <a href="{{ profile.website }}" target="_blank">{{ profile.website }}</a></p>
+                </div>
+            </div>
+            </div>
+          {% else %}
+          <div class="row d-flex mb-5 contact-info">
+            <div class="col-md-12 mb-4">
+                <h2 class="h3">Contact Information</h2>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-4">
+                    <p><span>Address:</span>House 4 (Flat A1 & A2), Road 4, Block J, Banashree, Dhaka 1219</p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-4">
+                    <p><span>Phone:</span> <a href="tel://+8801717087089">+8801717087089</a></p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-4">
+                    <p><span>Email:</span> <a href="mailto:gpadbd@gmail.com">gpadbd@gmail.com</a></p>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-3 d-flex mb-4">
+                <div class="info bg-light p-4">
+                    <p><span>Website</span> <a href="http://www.gpadbd.net" target="_blank">www.gpadbd.net</a></p>
+                </div>
+            </div>
+            </div>
+          {% endif %}
+    
+        <div class="row block-9">
+    
+          <div class="col-lg-6 d-flex">
+
+
+
+   
+
+              <div class="form contact-form">
+                <div id="sendmessage">Your message has been sent. Thank you!</div>
+                <div id="errormessage"></div>
+                <form action="" method="post" role="form" class="contactForm">
+                  <div class="form-group">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <div class="validation"></div>
+                  </div>
+                  <button class="btn btn-primary" type="submit">Submit</button>
+
+
+          </div>
+    
         </div>
-    </header>
+    
+          <div class="col-lg-6 d-flex">
 
-    <section class="about">
-        <h1>Facilities in PIMS:</h1>
-        <h2>Land Developers can do </h2>
-
-
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.637415928693!2d90.44292001498154!3d23.760305884584472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c773fc36c1c1%3A0xb1b05c29aba1e7ab!2sGeo-Planning%20for%20Advanced%20Development%20(GPAD)!5e0!3m2!1sen!2sbd!4v1608355200156!5m2!1sen!2sbd" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+ 
+              <!-- <div id="map" class="bg-light"></div> -->
+          </div>
         
-        <div>
-            <ul>
-                <li>Booking of the plot</li>
-                <li>Reminder of the due payment (SMS/Email)</li>
-                <li>Marketing Solutions</li>
-                <li>Payment Solutions</li>
-                <li>File Management System ( can be store all types of file related to customer/plot)</li>
-                <li>Registration Solution</li>
-              </ul>
-
-
-        </div>
-
-       <h3>Customer:</h3> 
-        
-        
-        
-        
-        
-        
-        <div>
-            <ul>
-                <li>Booking of the plot (Application)</li>
-                <li>Checking available plots in the housing</li>
-                <li>Payment history checking</li>
-                <li>Online Payment (SSL Payment Gateway directly to to Land Developer)</li>
-                <li>Application ( Any Change/Modification/ Land Development Fees/ Plot Registration etc)</li>
-              </ul>
-
-
-        </div>
-
-
-
+      </div>
+    </section>
+    </div>
 
 </body>
 </html>
