--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -46,17 +46,17 @@
                         <div class="navbar-collapse collapse" id="mobile_menu">
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="#">Pricing</a></li>
-                                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Clients <span class="caret"></span></a>
+                                <!-- <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Clients <span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                       <li><a href="/home">Swadesh Properties Ltd</a></li>
                                       <li><a href="#">Concord Real Estate</a></li>
                                       <li><a href="#">Nakshi Homes Ltd</a></li>
     
                                     </ul>
-                                </li>
+                                </li> -->
                                 <li><a href="#">Welcome</a></li>
                                 <li><a href="#">Services</a></li>
-                                <li><a href="#">Gallery</a></li>
+                                <li><a href="/contact">Contact Us</a></li>
                                 <li><a href="#">Demo</a></li>
                             </ul>
                             <ul class="nav navbar-nav">
